01_deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-server
  name: go-server-deployment
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
      - image: 11294/go-server
        name: go-server
