05_go_server_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-server    
  name: go-server-service
  namespace: project
spec:
  ports:
  - port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: go-server
