03_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: load-ingress
  namespace: project
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: ingress
spec:
  rules:
  - host: load.dummy-blue-green.ga
    http:
      paths:
        - path: /
          backend:
            serviceName: load-service
            servicePort: 5000
  - host: blue.dummy-blue-green.ga
    http:
      paths:
        - path: /
          backend:
            serviceName: go-client-service
            servicePort: 5000
  - host: green.dummy-blue-green.ga
    http:
      paths:
        - path: /
          backend:
            serviceName: redis-client-service
            servicePort: 5000
---
